--- a/css/index.css
+++ b/css/index.css
@@ -210,7 +210,7 @@ main{
     transform: rotate(-90deg);
     left: -20px;
     bottom: -70px;
-    font-size: 3.5em;
+    font-size: 3.5rem !important;
     font: icon;
     z-index: 1;
 }
